--- a/Mercedes A class.html
+++ b/Mercedes A class.html
@@ -102,13 +102,12 @@
 </nav>
 
 <div class="main-wrapper mt-5 mb-5">
-
     <div class="premium-card">
 
         <div class="row g-4">
 
             <div class="col-12 col-lg-6">
-                <h2 class="section-title">Mercedes class C</h2>
+                <h2 class="section-title">Mercedes class A</h2>
                 <div id="carouselExampleIndicators" class="carousel slide">
 
                     <div class="carousel-indicators">
@@ -119,13 +118,13 @@
 
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="Mercedes C.png" alt="">
+                            <img src="Mercedes A.png" alt="">
                         </div>
                         <div class="carousel-item">
-                            <img src="Mercedes C back.png" alt="">
+                            <img src="Mercedes A back.png" alt="">
                         </div>
                         <div class="carousel-item">
-                            <img src="Mercedes C inside.png" alt="">
+                            <img src="Mercedes A inside.png" alt="">
                         </div>
                     </div>
 
@@ -143,31 +142,30 @@
                 <div class="info-box">
                     <h2 class="section-title">Adatok</h2>
 
-
-    <li>Márka: Mercedes-Benz</li>
-    <li>Modell: E-Class (W213)</li>
-    <li>Motor:
-        <ul>
-            <li>Hengerűrtartalom: 1991 cm³</li>
-            <li>Teljesítmény: 197 LE</li>
-            <li>Üzemanyag: Benzin</li>
+            <li>Márka: Mercedes-Benz</li>
+            <li>Modell: A-Class (W177)</li>
+            <li>Motor:
+                <ul>
+                    <li>Hengerűrtartalom: 1332 cm³</li>
+                    <li>Teljesítmény: 163 LE</li>
+                    <li>Üzemanyag: Benzin</li>
+                </ul>
+            </li>
+            <li>Hajtás: Elsőkerék-hajtás</li>
+            <li>Váltó: 7 fokozatú automata (7G-DCT)</li>
+            <li>Méretek:
+                <ul>
+                    <li>Hossz: 4419 mm</li>
+                    <li>Szélesség: 1796 mm</li>
+                    <li>Magasság: 1440 mm</li>
+                </ul>
+            </li>
         </ul>
-    </li>
-    <li>Hajtás: Hátsókerék-hajtás</li>
-    <li>Váltó: 9 fokozatú automata (9G-TRONIC)</li>
-    <li>Méretek:
-        <ul>
-            <li>Hossz: 4923 mm</li>
-            <li>Szélesség: 1852 mm</li>
-            <li>Magasság: 1468 mm</li>
-        </ul>
-    </li>
-</ul>
-</div>
+    </div>
 
             <div class="col-12">
                 <div class="price-box">
-                    1 122 000 000 Ft
+                    1 825 000 000 Ft
                 </div>
             </div>
 
