--- a/BMW F20 card.html
+++ b/BMW F20 card.html
@@ -102,13 +102,12 @@
 </nav>
 
 <div class="main-wrapper mt-5 mb-5">
-
     <div class="premium-card">
 
         <div class="row g-4">
 
             <div class="col-12 col-lg-6">
-                <h2 class="section-title">Mercedes class C</h2>
+                <h2 class="section-title">BMW F20</h2>
                 <div id="carouselExampleIndicators" class="carousel slide">
 
                     <div class="carousel-indicators">
@@ -119,13 +118,13 @@
 
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="Mercedes C.png" alt="">
+                            <img src="BMW F20 e.png" alt="">
                         </div>
                         <div class="carousel-item">
-                            <img src="Mercedes C back.png" alt="">
+                            <img src="BMW F20 h.png" alt="">
                         </div>
                         <div class="carousel-item">
-                            <img src="Mercedes C inside.png" alt="">
+                            <img src="BMW F20 b.png" alt="">
                         </div>
                     </div>
 
@@ -142,32 +141,33 @@
             <div class="col-12 col-lg-6">
                 <div class="info-box">
                     <h2 class="section-title">Adatok</h2>
-
-
-    <li>Márka: Mercedes-Benz</li>
-    <li>Modell: E-Class (W213)</li>
-    <li>Motor:
-        <ul>
-            <li>Hengerűrtartalom: 1991 cm³</li>
-            <li>Teljesítmény: 197 LE</li>
-            <li>Üzemanyag: Benzin</li>
-        </ul>
-    </li>
-    <li>Hajtás: Hátsókerék-hajtás</li>
-    <li>Váltó: 9 fokozatú automata (9G-TRONIC)</li>
-    <li>Méretek:
-        <ul>
-            <li>Hossz: 4923 mm</li>
-            <li>Szélesség: 1852 mm</li>
-            <li>Magasság: 1468 mm</li>
-        </ul>
-    </li>
-</ul>
-</div>
+                    <ul>
+                        <li>Motor:
+                            <ul>
+                                <li>Típus: 120i</li>
+                                <li>Hengerűrtartalom: 1998 cm³</li>
+                                <li>Teljesítmény: 184 LE</li>
+                                <li>Üzemanyag: Benzin</li>
+                                <li>Üzemanyagtank: 52,0 liter</li>
+                            </ul>
+                        </li>
+                        <li>Hajtás: Hátsókerék-hajtás</li>
+                        <li>Váltó: 8 fokozatú automata</li>
+                        <li>Méretek:
+                            <ul>
+                                <li>Hossz: ~4324 mm</li>
+                                <li>Szélesség: ~1765 mm</li>
+                                <li>Magasság: ~1421 mm</li>
+                                <li>Csomagtartó: 360 liter</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
 
             <div class="col-12">
                 <div class="price-box">
-                    1 122 000 000 Ft
+                    1 725 000 000 Ft
                 </div>
             </div>
 
