--- a/BMW G42 card.html
+++ b/BMW G42 card.html
@@ -108,7 +108,7 @@
         <div class="row g-4">
 
             <div class="col-12 col-lg-6">
-                <h2 class="section-title">Mercedes class C</h2>
+                <h2 class="section-title">BMW G42</h2>
                 <div id="carouselExampleIndicators" class="carousel slide">
 
                     <div class="carousel-indicators">
@@ -119,13 +119,13 @@
 
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="Mercedes C.png" alt="">
+                            <img src="BMW G42 e.png" alt="">
                         </div>
                         <div class="carousel-item">
-                            <img src="Mercedes C back.png" alt="">
+                            <img src="BMW G42 h.png" alt="">
                         </div>
                         <div class="carousel-item">
-                            <img src="Mercedes C inside.png" alt="">
+                            <img src="BMW G42 b.png" alt="">
                         </div>
                     </div>
 
@@ -142,32 +142,33 @@
             <div class="col-12 col-lg-6">
                 <div class="info-box">
                     <h2 class="section-title">Adatok</h2>
-
-
-    <li>Márka: Mercedes-Benz</li>
-    <li>Modell: E-Class (W213)</li>
-    <li>Motor:
-        <ul>
-            <li>Hengerűrtartalom: 1991 cm³</li>
-            <li>Teljesítmény: 197 LE</li>
-            <li>Üzemanyag: Benzin</li>
-        </ul>
-    </li>
-    <li>Hajtás: Hátsókerék-hajtás</li>
-    <li>Váltó: 9 fokozatú automata (9G-TRONIC)</li>
-    <li>Méretek:
-        <ul>
-            <li>Hossz: 4923 mm</li>
-            <li>Szélesség: 1852 mm</li>
-            <li>Magasság: 1468 mm</li>
-        </ul>
-    </li>
-</ul>
-</div>
+                    <ul>
+                        <li>Motor:
+                            <ul>
+                                <li>Típu: 220i</li>
+                                <li>Hengerűrtartalom: 1 998 cm³</li>
+                                <li>Teljesítmény: 184 LE</li>
+                                <li>Üzemanyag: Benzin</li>
+                                <li>Üzemanyagtank: 52,0 liter</li>
+                            </ul>
+                        </li>
+                        <li>Hajtás: Hátsókerék-hajtás</li>
+                        <li>Váltó: 8 fokozatú automata</li>
+                        <li>Méretek:
+                            <ul>
+                                <li>Hossz: ~4537–4547 mm</li>
+                                <li>Szélesség: ~1838–1839 mm</li>
+                                <li>Magasság: ~1390–1418 mm</li>
+                                <li>Csomagtér: ~390 liter</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
 
             <div class="col-12">
                 <div class="price-box">
-                    1 122 000 000 Ft
+                    2 122 000 000 Ft
                 </div>
             </div>
 
