--- a/Mercedes E class code.html
+++ b/Mercedes E class code.html
@@ -1,92 +1,148 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 
-<style>
-body {
-    background: linear-gradient(135deg, #1c1f26, #2d323b, #1c1f26);
-    background-attachment: fixed;
-    color: white;
-    font-family: Arial, sans-serif;
-}
-.card {
-    width: 70rem;
-}
-.content-box {
-    background-color: rgba(255, 255, 255, 0.05);
-    border-radius: 15px;
-    padding: 25px;
-    backdrop-filter: blur(5px);
-}
-.carousel-item img {
-    width: 100%;
-    height: 600px;
-    object-fit: cover;
-    border-radius: 10px;
-}
-h1 {
-    color: #ffd700;
-    text-shadow: 0px 0px 8px black;
-}
-li {
-    margin-bottom: 5px;
-}
-</style>
+    <style>
+        body {
+            background: #0d0f12;
+            font-family: 'Segoe UI', sans-serif;
+            color: #e3e3e3;
+        }
+
+        .main-wrapper {
+            max-width: 1100px;
+            margin: auto;
+        }
+
+        .premium-card {
+            background: #15171c;
+            border-radius: 20px;
+            padding: 35px;
+            box-shadow: 0 15px 40px rgba(0,0,0,0.55);
+            transition: 0.3s;
+            border: 1px solid rgba(255,255,255,0.05);
+        }
+
+        .premium-card:hover {
+            transform: scale(1.01);
+            box-shadow: 0 25px 60px rgba(0,0,0,0.7);
+        }
+
+        .carousel-item img {
+            width: 100%;
+            height: 420px;
+            object-fit: cover;
+            border-radius: 15px;
+            filter: brightness(0.88);
+        }
+
+        @media (max-width: 768px) {
+            .carousel-item img {
+                height: 250px;
+            }
+        }
+
+        .section-title {
+            font-size: 2rem;
+            font-weight: 800;
+            margin-bottom: 10px;
+            color: #ffffff;
+        }
+
+        .info-box {
+            background: #1b1e24;
+            padding: 20px;
+            border-radius: 15px;
+            box-shadow: inset 0 0 10px rgba(0,0,0,0.4);
+            border: 1px solid rgba(255,255,255,0.05);
+        }
+
+        ul li {
+            font-size: 1.2rem;
+            margin-bottom: 5px;
+            color: #d8d8d8;
+        }
+
+        .price-box {
+            background: linear-gradient(135deg, #00cc77, #00995a);
+            color: white;
+            padding: 30px;
+            border-radius: 15px;
+            text-align: center;
+            font-size: 2.4rem;
+            font-weight: 900;
+            letter-spacing: 1px;
+            box-shadow: 0 15px 35px rgba(0,255,150,0.25);
+        }
+
+        .contact-info li {
+            font-size: 1.4rem;
+            margin-bottom: 8px;
+        }
+
+        .navbar {
+            background: #101216 !important;
+            border-bottom: 1px solid rgba(255,255,255,0.08);
+        }
+    </style>
 </head>
 
 <body>
 
-<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-<div class="container-fluid">
-    <a class="navbar-brand" href="#">Autókereskedés</a>
-    <button class="btn btn-outline-light" type="submit">Vissza</button>
-</div>
+<nav class="navbar navbar-expand-lg navbar-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">Autókereskedés</a>
+        <button class="btn btn-outline-light" type="submit">Vissza</button>
+    </div>
 </nav>
 
-<div style="grid-template-columns: 1fr 1fr;" class="d-grid gap-3 mt-4">
+<div class="main-wrapper mt-5 mb-5">
 
-<!-- KÉPEK -->
-<div class="p-3 content-box">
-<div id="carouselExampleIndicators" class="carousel slide">
+    <div class="premium-card">
 
-<div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></button>
-</div>
+        <div class="row g-4">
 
-<div class="carousel-inner">
-    <div class="carousel-item active">
-        <img src="1.png" alt="...">
-    </div>
-    <div class="carousel-item">
-        <img src="2.png" alt="...">
-    </div>
-    <div class="carousel-item">
-        <img src="3.png" alt="...">
-    </div>
-</div>
+            <div class="col-12 col-lg-6">
+                <h2 class="section-title">Mercedes class E</h2>
+                <div id="carouselExampleIndicators" class="carousel slide">
 
-<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon"></span>
-</button>
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></button>
+                    </div>
 
-<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-    <span class="carousel-control-next-icon"></span>
-</button>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="Mercedes E.png" alt="">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="Mercedes E back.png" alt="">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="Mercedes E inside.png" alt="">
+                        </div>
+                    </div>
 
-</div>
-</div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                    </button>
 
-<!-- ADATOK -->
-<div class="p-4 content-box">
-<h1>Adatok:</h1>
-<ul style="font-size: 23px;">
+                </div>
+            </div>
+
+            <div class="col-12 col-lg-6">
+                <div class="info-box">
+                    <h2 class="section-title">Adatok</h2>
+
     <li>Márka: Mercedes-Benz</li>
     <li>Modell: E-Class (W213)</li>
     <li>Motor:
@@ -106,23 +162,28 @@ li {
         </ul>
     </li>
 </ul>
-</div>
 
-<!-- ÁR -->
-<div class="p-4 content-box">
-<h1>ÁR:</h1>
-<p style="font-size: 25px;">27 000 000 Ft</p>
-</div>
 
-<!-- ELÉRHETŐSÉG -->
-<div class="p-5 content-box">
-<h1>Elérhetőség:</h1>
-<ul style="font-size: 23px;">
-    <li>Telefonszám: +36 70 942 3793</li>
-    <li>Email: autokereskedes@email.com</li>
-    <li>Helyszín: Fehérgyarmat, Rákos utca 3.</li>
-</ul>
-</div>
+            <div class="col-12">
+                <div class="price-box">
+                     622 000 000 Ft
+                </div>
+            </div>
+
+            <div class="col-12">
+                <div class="info-box">
+                    <h2 class="section-title">Elérhetőség</h2>
+                    <ul class="contact-info">
+                        <li>Telefonszám: +36 70 942 3793</li>
+                        <li>Email: autokereskedes@email.com</li>
+                        <li>Helyszín: Fehérgyarmat, Rákos utca 3.</li>
+                    </ul>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
 
 </div>
 
